// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GET /interested-party-comments without add IP comment link when appeal status is closed should render the shared interested party comments page with status 200 and no "Add IP comment" link 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal SHAREDTEST</span>
            <h1 class="govuk-heading-l">Interested party comments</h1>
        </div>
    </div>
    <p class="govuk-body"><a href="/documents/2/bulk-download/ip-comments/case-SHAREDTEST-ip-comments.zip"
        class="govuk-link">Download all documents</a>
    </p>
    <h2>Shared IP comments</h2>
    <h3>Interested party 1</h3>
    <dl class="govuk-summary-list govuk-summary-list--no-border">
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Interested party</dt>
            <dd class="govuk-summary-list__value">Lee Thornton</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date received</dt>
            <dd class="govuk-summary-list__value">1 April 2025, 10:15</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Email</dt>
            <dd class="govuk-summary-list__value">test1@example.com</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
            <dd class="govuk-summary-list__value">No address</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
            <dd class="govuk-summary-list__value">
                <div class="pins-show-more" data-label="Read more" data-mode="html">Comment 1</div>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
            <dd class="govuk-summary-list__value">No documents</dd>
        </div>
    </dl>
    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
    <h3>Interested party 2</h3>
    <dl class="govuk-summary-list govuk-summary-list--no-border">
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Interested party</dt>
            <dd class="govuk-summary-list__value">Lee Thornton</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date received</dt>
            <dd class="govuk-summary-list__value">2 April 2025, 15:05</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Email</dt>
            <dd class="govuk-summary-list__value">test1@example.com</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
            <dd class="govuk-summary-list__value">No address</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
            <dd class="govuk-summary-list__value">
                <div class="pins-show-more" data-label="Read more" data-mode="html">Comment 2</div>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
            <dd class="govuk-summary-list__value">No documents</dd>
        </div>
    </dl>
</main>"
`;

exports[`GET /interested-party-comments without add IP comment link when appeal status is complete should render the shared interested party comments page with status 200 and no "Add IP comment" link 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal SHAREDTEST</span>
            <h1 class="govuk-heading-l">Interested party comments</h1>
        </div>
    </div>
    <p class="govuk-body"><a href="/documents/2/bulk-download/ip-comments/case-SHAREDTEST-ip-comments.zip"
        class="govuk-link">Download all documents</a>
    </p>
    <h2>Shared IP comments</h2>
    <h3>Interested party 1</h3>
    <dl class="govuk-summary-list govuk-summary-list--no-border">
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Interested party</dt>
            <dd class="govuk-summary-list__value">Lee Thornton</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date received</dt>
            <dd class="govuk-summary-list__value">1 April 2025, 10:15</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Email</dt>
            <dd class="govuk-summary-list__value">test1@example.com</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
            <dd class="govuk-summary-list__value">No address</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
            <dd class="govuk-summary-list__value">
                <div class="pins-show-more" data-label="Read more" data-mode="html">Comment 1</div>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
            <dd class="govuk-summary-list__value">No documents</dd>
        </div>
    </dl>
    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
    <h3>Interested party 2</h3>
    <dl class="govuk-summary-list govuk-summary-list--no-border">
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Interested party</dt>
            <dd class="govuk-summary-list__value">Lee Thornton</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date received</dt>
            <dd class="govuk-summary-list__value">2 April 2025, 15:05</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Email</dt>
            <dd class="govuk-summary-list__value">test1@example.com</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
            <dd class="govuk-summary-list__value">No address</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
            <dd class="govuk-summary-list__value">
                <div class="pins-show-more" data-label="Read more" data-mode="html">Comment 2</div>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
            <dd class="govuk-summary-list__value">No documents</dd>
        </div>
    </dl>
</main>"
`;

exports[`GET /interested-party-comments without add IP comment link when appeal status is invalid should render the shared interested party comments page with status 200 and no "Add IP comment" link 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal SHAREDTEST</span>
            <h1 class="govuk-heading-l">Interested party comments</h1>
        </div>
    </div>
    <p class="govuk-body"><a href="/documents/2/bulk-download/ip-comments/case-SHAREDTEST-ip-comments.zip"
        class="govuk-link">Download all documents</a>
    </p>
    <h2>Shared IP comments</h2>
    <h3>Interested party 1</h3>
    <dl class="govuk-summary-list govuk-summary-list--no-border">
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Interested party</dt>
            <dd class="govuk-summary-list__value">Lee Thornton</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date received</dt>
            <dd class="govuk-summary-list__value">1 April 2025, 10:15</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Email</dt>
            <dd class="govuk-summary-list__value">test1@example.com</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
            <dd class="govuk-summary-list__value">No address</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
            <dd class="govuk-summary-list__value">
                <div class="pins-show-more" data-label="Read more" data-mode="html">Comment 1</div>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
            <dd class="govuk-summary-list__value">No documents</dd>
        </div>
    </dl>
    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
    <h3>Interested party 2</h3>
    <dl class="govuk-summary-list govuk-summary-list--no-border">
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Interested party</dt>
            <dd class="govuk-summary-list__value">Lee Thornton</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date received</dt>
            <dd class="govuk-summary-list__value">2 April 2025, 15:05</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Email</dt>
            <dd class="govuk-summary-list__value">test1@example.com</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
            <dd class="govuk-summary-list__value">No address</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
            <dd class="govuk-summary-list__value">
                <div class="pins-show-more" data-label="Read more" data-mode="html">Comment 2</div>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
            <dd class="govuk-summary-list__value">No documents</dd>
        </div>
    </dl>
</main>"
`;

exports[`GET /interested-party-comments without add IP comment link when appeal status is withdrawn should render the shared interested party comments page with status 200 and no "Add IP comment" link 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal SHAREDTEST</span>
            <h1 class="govuk-heading-l">Interested party comments</h1>
        </div>
    </div>
    <p class="govuk-body"><a href="/documents/2/bulk-download/ip-comments/case-SHAREDTEST-ip-comments.zip"
        class="govuk-link">Download all documents</a>
    </p>
    <h2>Shared IP comments</h2>
    <h3>Interested party 1</h3>
    <dl class="govuk-summary-list govuk-summary-list--no-border">
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Interested party</dt>
            <dd class="govuk-summary-list__value">Lee Thornton</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date received</dt>
            <dd class="govuk-summary-list__value">1 April 2025, 10:15</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Email</dt>
            <dd class="govuk-summary-list__value">test1@example.com</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
            <dd class="govuk-summary-list__value">No address</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
            <dd class="govuk-summary-list__value">
                <div class="pins-show-more" data-label="Read more" data-mode="html">Comment 1</div>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
            <dd class="govuk-summary-list__value">No documents</dd>
        </div>
    </dl>
    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
    <h3>Interested party 2</h3>
    <dl class="govuk-summary-list govuk-summary-list--no-border">
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Interested party</dt>
            <dd class="govuk-summary-list__value">Lee Thornton</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date received</dt>
            <dd class="govuk-summary-list__value">2 April 2025, 15:05</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Email</dt>
            <dd class="govuk-summary-list__value">test1@example.com</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
            <dd class="govuk-summary-list__value">No address</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
            <dd class="govuk-summary-list__value">
                <div class="pins-show-more" data-label="Read more" data-mode="html">Comment 2</div>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
            <dd class="govuk-summary-list__value">No documents</dd>
        </div>
    </dl>
</main>"
`;

exports[`Interested Party Comments (Shared/Published View) GET /interested-party-comments when item count is 0 should render the shared interested party comments page with status 200 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal SHAREDTEST</span>
            <h1 class="govuk-heading-l">Interested party comments</h1>
        </div>
    </div>
    <p class="govuk-body"><a href="/documents/2/bulk-download/ip-comments/case-SHAREDTEST-ip-comments.zip"
        class="govuk-link">Download all documents</a>
    </p>
    <p class="govuk-body"><a href="/appeals-service/appeal-details/2/interested-party-comments/add?backUrl=%2Fappeals-service%2Fappeal-details%2F2%2Finterested-party-comments"
        class="govuk-link">Add interested party comment</a>
    </p>
    <h2>Shared IP comments</h2>
</main>"
`;

exports[`Interested Party Comments (Shared/Published View) GET /interested-party-comments with data should render the shared interested party comments page with status 200 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal SHAREDTEST</span>
            <h1 class="govuk-heading-l">Interested party comments</h1>
        </div>
    </div>
    <p class="govuk-body"><a href="/documents/2/bulk-download/ip-comments/case-SHAREDTEST-ip-comments.zip"
        class="govuk-link">Download all documents</a>
    </p>
    <p class="govuk-body"><a href="/appeals-service/appeal-details/2/interested-party-comments/add?backUrl=%2Fappeals-service%2Fappeal-details%2F2%2Finterested-party-comments"
        class="govuk-link">Add interested party comment</a>
    </p>
    <h2>Shared IP comments</h2>
    <h3>Interested party 1</h3>
    <dl class="govuk-summary-list govuk-summary-list--no-border">
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Interested party</dt>
            <dd class="govuk-summary-list__value">Lee Thornton</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date received</dt>
            <dd class="govuk-summary-list__value">1 April 2025, 10:15</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Email</dt>
            <dd class="govuk-summary-list__value">test1@example.com</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
            <dd class="govuk-summary-list__value">No address</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
            <dd class="govuk-summary-list__value">
                <div class="pins-show-more" data-label="Read more" data-mode="html">Comment 1</div>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
            <dd class="govuk-summary-list__value">No documents</dd>
        </div>
    </dl>
    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
    <h3>Interested party 2</h3>
    <dl class="govuk-summary-list govuk-summary-list--no-border">
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Interested party</dt>
            <dd class="govuk-summary-list__value">Lee Thornton</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date received</dt>
            <dd class="govuk-summary-list__value">2 April 2025, 15:05</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Email</dt>
            <dd class="govuk-summary-list__value">test1@example.com</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
            <dd class="govuk-summary-list__value">No address</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
            <dd class="govuk-summary-list__value">
                <div class="pins-show-more" data-label="Read more" data-mode="html">Comment 2</div>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
            <dd class="govuk-summary-list__value">No documents</dd>
        </div>
    </dl>
</main>"
`;
